--- a/simple calculator/package.json
+++ b/simple calculator/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "s2am2-simple-calculator",
+  "name": "f2sam2-simple-calculator",
   "version": "1.0.1",
-  "description": "A simple calculator with Typescript, Node.js and Inquirer",
+  "description": "A simple calculator with TypeScript, Node.js and Inquirer",
   "main": "index.js",
   "type": "module",
   "bin": "index.js",
@@ -11,7 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "inquirer": "^9.2.16"
+    "inquirer": "^9.2.17"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7"
